# flow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
boards/demo/cols/done/: FLOW-6.md
boards/demo/cols/in_progress/: FLOW-3.md  FLOW-4.md
boards/demo/cols/in_review/: FLOW-5.md
boards/demo/cols/todo/: FLOW-1.md  FLOW-2.md
crates/flow/: Cargo.toml
crates/flow-cli/: Cargo.toml
crates/flow-cli/src/: cli.rs  main.rs
crates/flow-core/: Cargo.toml
crates/flow-core/src/: format.rs  lib.rs  model.rs  provider.rs  provider_jira.rs  provider_local.rs  store_fs.rs
crates/flow-tui/: Cargo.toml
crates/flow-tui/src/: app.rs  lib.rs  ui.rs
crates/flow/src/: main.rs
scripts/: migrate-priority.sh
src/: app.rs  cli.rs  format.rs  lib.rs  main.rs  model.rs  provider.rs  provider_jira.rs  provider_local.rs  store_fs.rs  ui.rs
