[package]
name = "flow"
version = "0.1.0"
edition = "2024"
description = "A terminal Kanban board with CLI and TUI modes."
license = "MIT"
repository = "https://github.com/example/flow"
keywords = ["kanban", "tui", "cli", "project-management", "ratatui"]
categories = ["command-line-utilities", "visualization"]

[lib]
name = "flow"
path = "src/lib.rs"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
