[workspace]
resolver = "3"
members = [
    "crates/flow-core",
    "crates/flow-tui",
    "crates/flow",
    "crates/flow-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/juanknebel/flow"

[workspace.dependencies]
flow-core = { path = "crates/flow-core" }
flow-tui  = { path = "crates/flow-tui" }
clap      = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
ratatui   = "0.30.0"
reqwest   = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }
serde     = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
