[package]
name = "flow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for flow Kanban board."

[[bin]]
name = "flow-cli"
path = "src/main.rs"

[dependencies]
flow-core = { workspace = true, features = ["cli"] }
clap = { workspace = true }
