[package]
name = "flow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for flow: models, providers, formatters, and filesystem storage."

[dependencies]
clap = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
cli = ["clap"]
